--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.3.6",
     "commander": "^9.4.1",
     "execa": "^6.1.0",
+    "jest": "^29.5.0",
     "markdown-it": "^13.0.1",
     "mocha": "^10.1.0",
     "prismjs": "^1.29.0"
