--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest": "^29.5.0",
     "markdown-it": "^13.0.1",
     "mocha": "^10.1.0",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
@@ -35,6 +36,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^5.2.2"
   }
 }
